--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/GNSS2.png" rel="icon">
+  <link href="assets/img/GNSS2.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -305,7 +305,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <table style="width: auto;">
                 <tr>
@@ -318,7 +318,7 @@
                 <tr>
                   <td>
                     <p style="margin-bottom: 0px; font-size: large; text-align: justify;">As Geodetic Engineer, I learnt about Topographic engineering (such as road profile, topographic mapping, and cut & fill purposes). I've done an internship and an mid-camp as my accomplish. I learnt GNSS too and its application. I and my lecturer has project that used GNSS to Deformation Surveying in Demak. We observe Kendeng's Fault for 7 days. In other project, I used GNSS to collect Post-Marking Point survey. This project needs Drone Pilots to observe Yogyakarta's City. Last, I learnt GIS (Geographic Information System). I and my lecturer has project to fill database in QGIS. It used to develop land system known as SITARU Yogyakarta</p>
-                    <p class="fst-italic"><small>Sebagai Insinyur Teknik Geodesi, saya belajar tentang Survei Topografi (seperti profil jalan, pemetaan topografi, dan keperluan cut & fill). Saya telah melakukan banyak magang dan tugas menengah seperti yang saya capai. Saya juga mempelajari GNSS dan penerapannya. Saya dan dosen saya mempunyai proyek yang menggunakan GNSS untuk Survei Deformasi di Sepanjang Demak, Lasem, dan Kendeng. Kami melakukan observasi Sesar Kendeng selama 7 hari. Di proyek lain, saya menggunakan GNSS untuk survei pengumpulan titik Post-Marking. Proyek ini membutuhkan Pilot Drone untuk pemetaan Kota Yogyakarta. Terakhir saya mempelajari GIS (Sistem Informasi Geografis). Saya dan dosen saya mempunyai proyek untuk mengisi database di QGIS. Hal ini digunakan untuk mengembangkan sistem pertanahan yang dikenal dengan SITARU Yogyakarta</small></p>
+                    <p class="fst-italic" style="text-align: justify;"><small>Sebagai Insinyur Teknik Geodesi, saya belajar tentang Survei Topografi (seperti profil jalan, pemetaan topografi, dan keperluan cut & fill). Saya telah melakukan banyak magang dan tugas menengah seperti yang saya capai. Saya juga mempelajari GNSS dan penerapannya. Saya dan dosen saya mempunyai proyek yang menggunakan GNSS untuk Survei Deformasi di Sepanjang Demak, Lasem, dan Kendeng. Kami melakukan observasi Sesar Kendeng selama 7 hari. Di proyek lain, saya menggunakan GNSS untuk survei pengumpulan titik Post-Marking. Proyek ini membutuhkan Pilot Drone untuk pemetaan Kota Yogyakarta. Terakhir saya mempelajari GIS (Sistem Informasi Geografis). Saya dan dosen saya mempunyai proyek untuk mengisi database di QGIS. Hal ini digunakan untuk mengembangkan sistem pertanahan yang dikenal dengan SITARU Yogyakarta</small></p>
                   </td>
                 </tr>
               </table>
@@ -559,13 +559,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/GNSS2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>Not Uploaded Yet!</h4>
+                <p>Not Uploaded Yet!</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Not Uploaded Yet!"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Not Uploaded Yet!"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -573,13 +573,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/GNSS2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Not Uploaded Yet!</h4>
+                <p>Not Uploaded Yet!</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Not Uploaded Yet!"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Not Uploaded Yet!"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -587,13 +587,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/GNSS2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>Not Uploaded Yet!</h4>
+                <p>Not Uploaded Yet!</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Not Uploaded Yet!"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Not Uploaded Yet!"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -601,13 +601,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/GNSS2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Not Uploaded Yet!</h4>
+                <p>Not Uploaded Yet!</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Not Uploaded Yet!"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Not Uploaded Yet!"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -615,13 +615,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/GNSS2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
+                <h4>Not Uploaded Yet!</h4>
+                <p>Not Uploaded Yet!</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Not Uploaded Yet!"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Not Uploaded Yet!"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -629,13 +629,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/GNSS2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
+                <h4>Not Uploaded Yet!</h4>
+                <p>Not Uploaded Yet!</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Not Uploaded Yet!"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Not Uploaded Yet!"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -643,13 +643,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/GNSS2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>Not Uploaded Yet!</h4>
+                <p>Not Uploaded Yet!</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Not Uploaded Yet!"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Not Uploaded Yet!"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -657,13 +657,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/GNSS2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
+                <h4>Not Uploaded Yet!</h4>
+                <p>Not Uploaded Yet!</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Not Uploaded Yet!"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Not Uploaded Yet!"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -671,13 +671,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/GNSS2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Not Uploaded Yet!</h4>
+                <p>Not Uploaded Yet!</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Not Uploaded Yet!"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Not Uploaded Yet!"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
